# my-mandelbrot-fractal

./: README.md  mandelbrot set.py  pyproject.toml
