[tool.poetry]
name = "my-mandelbrot-fractal"
version = "0.1.0"
description = ""
authors = ["José Ortiz-Ocampo <joseortiz1807@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
